# web/iinetter/app/Http/Controllers/API/V1/UserController.php
@@ -1,0 +1,203 @@
+<?php
+
+namespace App\Http\Controllers\API\V1;
+
+use App\Http\Requests\API\V1\UpdateUserRequest;
+use App\Models\User;
+use App\Repositories\UserRepository;
+use Illuminate\Http\Request;
+use App\Http\Controllers\AppBaseController;
+use Illuminate\Support\Facades\Hash;
+use Response;
+
+/**
+ * Class UserController
+ * @package App\Http\Controllers\API\V1
+ */
+
+class UserController extends AppBaseController
+{
+    /** @var  UserRepository */
+    private $userRepository;
+
+    public function __construct(UserRepository $userRepo)
+    {
+        $this->userRepository = $userRepo;
+    }
+
+    /**
+     * @param Request $request
+     * @return Response
+     *
+     * @SWG\Get(
+     *      path="/user",
+     *      summary="Get a user.",
+     *      tags={"User"},
+     *      description="Get user",
+     *      produces={"application/json"},
+     *      security={{"apiToken":{}}},
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/User"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function index(Request $request)
+    {
+        $id = auth('api')->id();
+
+        /** @var User $user */
+        $user = $this->userRepository->find($id);
+
+        if (empty($user)) {
+            return $this->sendError('User not found');
+        }
+
+        return $this->sendResponse($user->toArray(), 'User retrieved successfully');
+    }
+
+    /**
+     * @param UpdateUserAPIRequest $request
+     * @return Response
+     *
+     * @SWG\Patch(
+     *      path="/user",
+     *      summary="Update the specified User in storage",
+     *      tags={"User"},
+     *      description="Update User",
+     *      produces={"application/json"},
+     *      security={{"apiToken":{}}},
+     *      @SWG\Parameter(
+     *          name="name",
+     *          description="name of User",
+     *          type="string",
+     *          required=false,
+     *          in="query"
+     *      ),
+     *      @SWG\Parameter(
+     *          name="email",
+     *          description="email of User",
+     *          type="string",
+     *          required=false,
+     *          in="query"
+     *      ),
+     *      @SWG\Parameter(
+     *          name="password",
+     *          description="password of User",
+     *          type="string",
+     *          required=false,
+     *          in="query"
+     *      ),
+     *      @SWG\Parameter(
+     *          name="password_confirmation",
+     *          description="password_confirmation of User",
+     *          type="string",
+     *          required=false,
+     *          in="query"
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/User"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function update(UpdateUserRequest $request)
+    {
+        $id = auth('api')->id();
+
+        $input = $request->all();
+
+        /** @var User $user */
+        $user = $this->userRepository->find($id);
+
+        if (empty($user)) {
+            return $this->sendError('User not found');
+        }
+
+        if (isset($input['password'])) {
+            $input['password'] = Hash::make($input['password']);
+        }
+
+        $user = $this->userRepository->update($input, $id);
+
+        return $this->sendResponse($user->toArray(), 'User updated successfully');
+    }
+
+    /**
+     * @param int $id
+     * @return Response
+     *
+     * @SWG\Delete(
+     *      path="/user",
+     *      summary="Remove the specified User from storage",
+     *      tags={"User"},
+     *      description="Delete User",
+     *      produces={"application/json"},
+     *      security={{"apiToken":{}}},
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  type="string"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function destroy()
+    {
+        $id = auth('api')->id();
+
+        /** @var User $user */
+        $user = $this->userRepository->find($id);
+
+        if (empty($user)) {
+            return $this->sendError('User not found');
+        }
+
+        $user->delete();
+
+        return $this->sendSuccess('User deleted successfully');
+    }
+}
