# web/iinetter/routes/api.php
@@ -14,6 +14,14 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
+Route::group(['prefix' => 'v1', 'namespace' => 'V1'], function () {
+    Route::post('register', 'RegisterController@register');
+    Route::post('login', 'LoginController@login');
+
+    Route::group(['middleware' => 'auth:api'], function () {
+        Route::put('api_token', 'ApiTokenController@update');
+        Route::get('user', 'UserController@index');
+        Route::patch('user', 'UserController@update');
+        Route::delete('user', 'UserController@destroy');
+    });
 });
